feat(embeddings): save resource chunks in db with embeddings for highlighting and semantic search functionalities